# EjTracker

./: .gitignore  =6.5.0  README.md  build_macos_app.sh  create_icons.py  requirements.txt  setup.py  setup_macos.py  startup.py
resources/icons/: app_icon.icns
src/: app_launcher.py
src/time_tracker/: __init__.py  app.py  main.py
src/time_tracker/bootstrap/: __init__.py  loader.py
src/time_tracker/gui/: dashboard_window.py  main_window.py
src/time_tracker/utils/: time_manager.py
time-tracker/: README.md  pyproject.toml  requirements.txt  setup.py
time-tracker/resources/styles/: default.qss
time-tracker/src/time_tracker/: app.py  main.py
time-tracker/src/time_tracker/controllers/: tracker_controller.py
time-tracker/src/time_tracker/gui/: components.py  dialogs.py  main_window.py
time-tracker/src/time_tracker/models/: time_entry.py
time-tracker/src/time_tracker/utils/: date_utils.py
time-tracker/tests/: test_models.py  test_utils.py
